tests/checker/diagnostics/0668_fcm_local_abstract_result_annotation_01.ml.infer.expected
File "0668_fcm_local_abstract_result_annotation_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0668_fcm_local_abstract_result_annotation_01 is not a valid module name.

File "0668_fcm_local_abstract_result_annotation_01.ml", line 8, characters 2-14:
8 |   X.id X.value
      ^^^^^^^^^^^^
Error: This expression has type X.t = a
       but an expression was expected of type bool
